add error and new some new things

--- a/MVC SportGoods/appsettings.json
+++ b/MVC SportGoods/appsettings.json
@@ -1,7 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\BlogDB;Database=blog;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "trace",
+      "Microsoft": "Warning"
     }
   },
   "AllowedHosts": "*"
